# Anxious

./: CODE_OF_CONDUCT.md  LICENSE_MIT  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  static.yml
src/: Anxious.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: about-dialog.tsx  menu-mode-toggle.tsx  menu.tsx  preferences=dialog.tsx
src/components/ui/: hover-card.tsx
src/dashboard/: page.tsx
src/dashboard/components/: main-nav.tsx  search.tsx
