[package]
name = "anxious"
version = "0.1.0"
description = "Anxious is an intelligent and powerful program designed to optimize and keep your system running at peak performance. It provides a complete set of functions to clean, optimize and defragment your computer, allowing it to perform at its peak."
authors = ["aksueikava"]
license = "GPL-3.0"
repository = "https://github.com/aksueikava/Anxious"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.6", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.10", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-app = "2.0.0-alpha.0"
tauri-plugin-os = "2.0.0-alpha.0"
tauri-plugin-shell = "2.0.0-alpha.0"
tauri-plugin-window = "2.0.0-alpha.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
